--- a/components/Groups.html
+++ b/components/Groups.html
@@ -46,5 +46,7 @@
 
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/main.js"></script> <!-- Lien vers votre fichier JS -->
+    <script src="../controllers/jwtToken.js"></script>
+
 </body>
 </html>
