--- a/components/SignUp.html
+++ b/components/SignUp.html
@@ -9,20 +9,18 @@
 <body>
   <div class="wrapper fadeInDown">
     <div id="formContent">
-      <!-- Tabs Titles -->
-
       <!-- Icon -->
       <div class="fadeIn first">
         <img src="../assets/img/user-lock-solid.svg" id="icon" alt="User Icon" />
       </div>
 
       <!-- Login Form -->
-      <form class="formSign" onsubmit="registerUser(event)">
-        <input type="text" id="login" class="fadeIn second" name="login" placeholder="Pseudo">
-        <input type="text" id="Mail" class="fadeIn second" name="mail" placeholder="Mail">
-        <input type="password" id="password" class="fadeIn third" name="password" placeholder="Mot de passe">
-        <input type="password" id="passwordConfirm" class="fadeIn third" name="passwordConfirm" placeholder="Confirmer le mot de passe">
-        <input type="submit" class="fadeIn fourth" value="S'inscrire">
+      <form id="registerForm">
+        <input type="text" id="login" class="fadeIn second" name="login" placeholder="Pseudo" required>
+        <input type="text" id="Mail" class="fadeIn second" name="mail" placeholder="Mail" required>
+        <input type="password" id="password" class="fadeIn third" name="password" placeholder="Mot de passe" required>
+        <input type="password" id="passwordConfirm" class="fadeIn third" name="passwordConfirm" placeholder="Confirmer le mot de passe" required>
+        <input type="button" class="fadeIn fourth" value="S'inscrire" onclick="registerUser()">
       </form>
 
       <!-- Remind Password -->
@@ -32,5 +30,6 @@
     </div>
   </div>
   <script src="../renderer.js"></script>
+  <script src="../controllers/jwtToken.js"></script>
 </body>
 </html>
